# chess-bot-arena

./: README.md  app.py  packages.txt  pyproject.toml  requirements.txt
components/svg_drag_board/: index.html
