[project]
name = "streamlit-chess-ai-demo"
version = "0.1.0"
description = "Standalone Streamlit chess demo with CPU inference for a pretrained next-move model"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit==1.39.0",
    "python-chess==1.999",
    "torch==2.4.1",
]
